--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -1,10 +1,30 @@
-.userInner{
-    img{
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
+.userInnerWrap {
+    .userInner {
+        background: #1f1d1e;
+        display: flex;
+        height: 150px;
+        align-items: center;
+        padding-top: 20px;
+        .userImg img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            margin-left: 20px;
+            border: 2px solid #fff;
+        }
+        .userLabel {
+            margin-left: 20px;
+            color: #fff;
+            font-size: 14px;
+            .userTitle {
+                margin: 5px 0;
+            }
+        }
     }
-    .desc{
-        font-size: 50px;
+    .ownDesc{
+        width: 666px;
+        height: 257px;
+        border-radius: 10px;
+        background: pink;
     }
 }
