--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -1,27 +1,76 @@
 .userInnerWrap {
     .userInner {
-        background: #1f1d1e;
+        background: #0e80d2db;
         display: flex;
-        height: 200px;
+        height: 220px;
         align-items: center;
         padding-top: 40px;
         .userImg img {
-            width: 100px;
-            height: 100px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             margin-left: 50px;
-            border: 2px solid #fff;
+            border: 4px solid #fff;
         }
         .userLabel {
             margin-left: 50px;
             color: #fff;
-            font-size: 14px;
+            font-size: 28px;
             .userTitle {
                 margin: 10px 0;
             }
         }
     }
     .ownDesc{
-
+        .evaluateList{
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            .evaluateBtn{
+                margin:10px;
+                background: #4fe95452;
+            }
+        }
+        .cardTitle{
+            font-weight: 600;
+            color: #ccc;
+        }
+        .rankTitle{
+            font-size: 28px;
+            color:#333;
+        }
+        .rank{
+            font-size: 30px;
+            color: red;
+            font-weight: 600;
+        }
+        .evaluateDesc{
+            font-size: 24px;
+            color: #666;
+        }
+        .space-carousel{
+            padding: 16px;
+            overflow: hidden;
+        }
+        .cardItem{
+            border-radius: 50px;
+            .cardDetailWrapInner{
+                padding:40px 0 0 40px;
+                .cardListTitle{
+                    font-size: 26px;
+                }
+                .cardDetailWrap{
+                    .cardDetailNum{
+                        font-size: 40px;
+                    }
+                    .cardDetailMin{
+                        margin-left: 20px;
+                        font-size: 24px;
+                    }
+                }
+            }
+        }
+        
+        
     }
 }
