--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -12,7 +12,7 @@
 }
 .getLength{
     font-size:50px;
-    color: #6abd82;
+    color: #6cbdf7;
     margin-top: 16px;
     font-weight: 400;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
