--- a/src/pages/Sport/index.less
+++ b/src/pages/Sport/index.less
@@ -19,12 +19,14 @@
                     font-size: 50px;
                     text-align: center;
                     line-height: 90px;
-                    color: white
+                    color: white;
+                    margin-left: 10px;
                 }
                 .sportLinksLabel{
                     margin-top: 20px;
                     font-size: 28px;
                     color: #666;
+                    text-align:center;
                 }
             }
         }
