--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -8,12 +8,12 @@
     padding-bottom: 10px; 
 }
 .getName{
-    font-size: 30px;
+    font-size: 28px;
+    color: #666;
 }
 .getLength{
-    font-size:50px;
-    color: #6cbdf7;
+    font-size:40px;
+    color: #052fff;
     margin-top: 16px;
-    font-weight: 400;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 600;
 }
