--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -30,6 +30,9 @@
                 margin:10px;
                 background: #4fe95452;
             }
+            .skill{
+                margin:10px;
+            }
         }
         .cardTitle{
             font-weight: 600;
