--- a/src/pages/Sport/mySport/index.less
+++ b/src/pages/Sport/mySport/index.less
@@ -1,8 +1,7 @@
-
 .listIcon{
   width: 50px;
   height: 50px;
-  background: deeppink;
+  background: #1488ff78;
   display: inline-block;
   vertical-align: middle;
 }
@@ -17,8 +16,11 @@
 
 }
 .listNumber{
-  font-size: 28px;
+  font-size: 0.28rem;
   color: #666;
+  display: inline-block;
+  width: 120px;
+  text-align: right;
 }
 .imgViewList{
   display: flex;
@@ -29,4 +31,11 @@
     height: 200px;
     margin: 10px;
   }
+}
+.loadFooter{
+  text-align: center;
+  color: #999;
+}
+.am-list-body{
+  background: #f5f5f9;
 }
