--- a/src/pages/Pk/index.less
+++ b/src/pages/Pk/index.less
@@ -10,3 +10,17 @@
     margin-left: 70px;
     
 }
+.activeBtn{
+    width: 60px;
+    height: 60px;
+    position: fixed;
+    left: 600px;
+    top: 800px;
+    border-radius: 50%;
+    padding: 5px;
+    box-shadow:1px 0px 24px 4px #00b8ff1f;
+    img{
+        width: 100%;
+        height: 100%;
+    }
+}
