--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -1,19 +1,24 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-.paiMing li{
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px; 
-}
-.getName{
-    font-size: 28px;
-    color: #666;
-}
-.getLength{
-    font-size:40px;
-    color: #052fff;
-    margin-top: 16px;
-    font-weight: 600;
+.paiMing{
+    .goldItem{
+        text-align: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        .goldIcon{
+            width: 100px;
+            height: 100px;
+            display: inline-block;
+            font-size: 150px;
+        }
+        .getName{
+            font-size: 28px;
+            color: #666;
+        }
+        .getLength{
+            font-size:40px;
+            color: #052fff;
+            margin-top: 16px;
+            font-weight: 600;
+        }
+    }
+
 }
