--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -1,6 +1,6 @@
 .userInnerWrap {
     .userInner {
-        background: #0e80d2db;
+        background: rgba(14, 128, 210,1);
         display: flex;
         height: 220px;
         align-items: center;
