--- a/src/pages/Pk/index.less
+++ b/src/pages/Pk/index.less
@@ -18,9 +18,15 @@
     top: 800px;
     border-radius: 50%;
     padding: 5px;
-    box-shadow:1px 0px 24px 4px #00b8ff1f;
-    img{
+    box-shadow:1px 0px 24px 4px rgba(0, 184, 255, 0.62);
+    background: rgb(0, 184, 255);
+    span{
+        display: inline-block;
         width: 100%;
         height: 100%;
+        font-size: 35px;
+        color: #fff;
+        text-align: center;
+        line-height: 45px;
     }
 }
