--- a/src/pages/Sport/index.less
+++ b/src/pages/Sport/index.less
@@ -13,12 +13,12 @@
                 .sportLinkIcon{
                     height: 90px;
                     width: 90px;
-                    background: #ff55004f;
+                    background:rgb(14, 128, 210);
                     border-radius: 50%;
                     font-size: 50px;
                     text-align: center;
                     line-height: 90px;
-                    color: white;
+                    color: #fff;
                     margin-left: 10px;
                 }
                 .sportLinksLabel{
