--- a/src/pages/Sport/mySport/index.less
+++ b/src/pages/Sport/mySport/index.less
@@ -1,7 +1,7 @@
 .listIcon{
   width: 50px;
   height: 50px;
-  background: #1488ff78;
+  font-size: 45px;
   display: inline-block;
   vertical-align: middle;
 }
@@ -38,4 +38,12 @@
 }
 .am-list-body{
   background: #f5f5f9;
+}
+.controls__1g_fd .closeButton__awvpY{
+  width: 60px!important;
+  height: 60px!important;
+}
+.controls__1g_fd .closeButton__awvpY > svg {
+  width: 60px!important;
+  height: 60px!important;
 }
