--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -20,6 +20,12 @@
                 margin: 10px 0;
             }
         }
+        .changeDetail{
+            margin-left: 20px;
+            padding: 15px;
+            border-radius: 30px;
+            border: 1px solid #000;
+        }
     }
     .ownDesc{
         .evaluateList{
