--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -66,15 +66,17 @@
             .cardDetailWrapInner{
                 padding:40px 0 0 40px;
                 .cardListTitle{
-                    font-size: 26px;
+                    font-size: 28px;
                 }
                 .cardDetailWrap{
                     .cardDetailNum{
-                        font-size: 40px;
+                        font-size: 28px;
+
                     }
                     .cardDetailMin{
-                        margin-left: 20px;
-                        font-size: 24px;
+                        margin: 10px 0;
+                        font-size: 28px;
+
                     }
                 }
             }
