--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -29,15 +29,15 @@
     }
     .ownDesc{
         .evaluateList{
-            display: flex;
-            align-items: center;
-            flex-wrap: wrap;
             .evaluateBtn{
-                margin:10px;
-                background: #4fe95452;
+                margin:40px;
+                border:1px solid #cccccc;
+                font-size: 12px;
+                //background: rgb(79, 233, 84);
             }
             .skill{
                 margin:10px;
+                font-size: 24px;
             }
         }
         .cardTitle{
