--- a/src/pages/Sport/mySport/index.less
+++ b/src/pages/Sport/mySport/index.less
@@ -47,3 +47,7 @@
   width: 60px!important;
   height: 60px!important;
 }
+
+.picker-list .am-list-item .am-list-line .am-list-extra {
+  flex-basis: initial;
+}
