--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -22,25 +22,32 @@
         }
         .changeDetail{
             margin-left: 20px;
-            padding: 15px;
-            border-radius: 30px;
+            padding: 10px;
+            border-radius: 50px;
             border: 2px solid #000;
         }
     }
     .ownDesc{
-        .evaluateList{
-            .evaluateBtn{
-                font-size: 28px;
-                //background: rgb(79, 233, 84);
-            }
-            .skill{
-                margin:10px;
-                font-size: 24px;
-            }
-        }
         .cardTitle{
+            border-bottom: 1px solid #ddd;
+            font-size: 28px;
+            color: #000;
             font-weight: 600;
-            color: #ccc;
+            padding-bottom: 25px;
+            margin-bottom: 10px;
+        }
+        .evaluateBox{
+            display: flex;
+            flex-wrap: wrap;
+            padding: 10px;
+            .skill{
+                padding:15px;
+                border:2px solid #ddd;
+                border-radius: 6px;
+                margin: 10px;
+                font-size: 28px;
+                color: #666;
+            }
         }
         .rankTitle{
             font-size: 28px;
@@ -50,10 +57,6 @@
             font-size: 30px;
             color: red;
             font-weight: 600;
-        }
-        .evaluateDesc{
-            font-size: 24px;
-            color: #666;
         }
         .space-carousel{
             padding: 16px;
