--- a/src/component/loading/index.less
+++ b/src/component/loading/index.less
@@ -1,17 +1,15 @@
 .spinner {
-    margin: 100px auto;
+    margin: 0 auto;
     width: 60px;
     height: 60px;
     position: relative;
     .spinner-container {
         position: absolute;
         width: 100%;
-        height: 100%;
         div {
             width: 16px;
             height: 16px;
             background-color: #67CF22;
-        
             border-radius: 100%;
             position: absolute;
             -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
