--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -24,8 +24,10 @@
             margin-left: 20px;
             padding: 10px;
             border-radius: 50px;
-            border: 2px solid #000;
+            border: 2px solid #ddd;
+            color: #ddd;
         }
+
     }
     .ownDesc{
         .cardTitle{
