--- a/src/pages/Sport/mySport/index.less
+++ b/src/pages/Sport/mySport/index.less
@@ -52,12 +52,12 @@
   flex-basis: initial;
 }
 
-.listview-wrap {
-  .am-list-view-scrollview {
-    .am-list-view-scrollview-content {
-      .am-pull-to-refresh-content-wrapper{
-        height:100vh;
-      }
-    }
-  }
-}
+//.listview-wrap {
+//  .am-list-view-scrollview {
+//    .am-list-view-scrollview-content {
+//      .am-pull-to-refresh-content-wrapper{
+//        height:calc(100vh - 100px);
+//      }
+//    }
+//  }
+//}
