--- a/src/pages/Sport/mySport/index.less
+++ b/src/pages/Sport/mySport/index.less
@@ -51,7 +51,14 @@
 .picker-list .am-list-item .am-list-line .am-list-extra {
   flex-basis: initial;
 }
-
+.controls__1g_fd .zoomButton__x8Ef7{
+  width: 60px!important;
+  height: 60px!important;
+}
+.controls__1g_fd .zoomButton__x8Ef7 > svg{
+  width: 60px!important;
+  height: 60px!important;
+}
 //.listview-wrap {
 //  .am-list-view-scrollview {
 //    .am-list-view-scrollview-content {
