--- a/src/pages/Sport/index.less
+++ b/src/pages/Sport/index.less
@@ -1,7 +1,7 @@
 @import "./../../baseColor.less";
 .sportPlane{
     background: @bg_color;
-    height:calc(100vh-50px);
+    height:calc(100vh - 100px);
     footer{
         .sportLinksBox{
             margin-top: 20px;
