--- a/src/pages/Sport/mySport/index.less
+++ b/src/pages/Sport/mySport/index.less
@@ -59,6 +59,26 @@
   width: 60px!important;
   height: 60px!important;
 }
+.activeBtn{
+  width: 60px;
+  height: 60px;
+  position: fixed;
+  left: 600px;
+  top: 800px;
+  border-radius: 50%;
+  padding: 5px;
+  box-shadow:1px 0px 24px 4px rgba(0, 184, 255, 0.62);
+  background: rgb(0, 184, 255);
+  span{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    font-size: 35px;
+    color: #fff;
+    text-align: center;
+    line-height: 46px;
+  }
+}
 //.listview-wrap {
 //  .am-list-view-scrollview {
 //    .am-list-view-scrollview-content {
