额外运动接口联调

--- a/src/pages/Sport/adjustment/index.less
+++ b/src/pages/Sport/adjustment/index.less
@@ -35,6 +35,11 @@
       width: 20vw;
       height: 20vw;
       margin-left: 0.2rem;
+      margin-top: 0.2rem;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
     .am-list-item {
       padding: 0;
