--- a/src/pages/Sport/adjustment/index.less
+++ b/src/pages/Sport/adjustment/index.less
@@ -32,6 +32,7 @@
     }
     .list-img {
       float: right;
+      overflow: hidden;
       width: 20vw;
       height: 20vw;
       margin-left: 0.2rem;
@@ -39,6 +40,7 @@
       img {
         width: 100%;
         height: 100%;
+        object-fit: cover;
       }
     }
     .am-list-item {
@@ -107,6 +109,11 @@
       height: 50px;
       border: 1px solid #888888;
       line-height: 50px;
+    }
+  }
+  .imgViewList {
+    img {
+      object-fit: cover;
     }
   }
 }
