--- a/src/pages/Sport/adjustment/index.less
+++ b/src/pages/Sport/adjustment/index.less
@@ -79,33 +79,42 @@
 
 // 调整详情
 .adjustDetail {
-  padding: 0 0.3rem;
   .detailTop {
     overflow: hidden;
-    background: #eeeeee;;
+    padding: 0 0.2rem;
+    background: #efefef;
+    border-bottom: 1px solid #dddddd;
+    border-top: 1px solid #dddddd;
     p {
-      display: flex;
-      justify-content: space-between;
+      margin: 20px;
     }
     .detailTitle {
-      span {
-        font-size: 0.25rem;
-      }
+      text-align: center;
       .detailName {
+        width: 100%;
         font-size: 0.3rem;
         font-weight: 600;
       }
     }
+    .detailNumber {
+      display: flex;
+      justify-content: flex-end;
+      span {
+        font-size: 0.25rem;
+      }
+    }
+    .detailContent {
+      font-size: 0.3rem;
+    }
   }
   .detailPerson {
     overflow: hidden;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #dddddd;
+    padding: 15px 30px;
     p {
       float: left;
-      margin: 10px 20px;
+      margin: 10px 15px;
       padding-left: 15px;
-      width: 170px;
+      width: 180px;
       height: 50px;
       border: 1px solid #888888;
       line-height: 50px;
@@ -114,6 +123,9 @@
   .imgViewList {
     img {
       object-fit: cover;
+      width: 50%;
+      height: 3rem;
+      margin: 0;
     }
   }
 }
