--- a/src/pages/My/index.less
+++ b/src/pages/My/index.less
@@ -1,5 +1,5 @@
 @import "./../../baseColor.less";
 .myPlane{
     background: @bg_color;
-    height:calc(100vh-50px);
+    height:calc(100vh - 100px);
 }
