--- a/src/pages/Pk/index.less
+++ b/src/pages/Pk/index.less
@@ -10,6 +10,7 @@
     padding: 5px;
     box-shadow:1px 0px 24px 1px rgba(0, 184, 255, 0.62);
     background: rgb(0, 184, 255);
+    z-index: 999;
     span{
       display: inline-block;
       width: 100%;
