--- a/src/pages/Sport/adjustment/index.less
+++ b/src/pages/Sport/adjustment/index.less
@@ -141,11 +141,11 @@
 
 // 额外调整新建
 .create-activity {
-  position: relative;
   .date-picker-list {
     background: #ffffff;
   }
   .btn-group {
+    background: none;
     .btn-reset {
       width: 46%;
       margin-right: 20px;
