--- a/src/pages/Pk/index.less
+++ b/src/pages/Pk/index.less
@@ -73,6 +73,13 @@
 .pkInner{
   height: 500px;
   margin-bottom: 100px;
+  //.activeBtnBox{
+  //  display: flex;
+  //  justify-content: space-around;
+  //  .activeItem{
+  //    width: 44%
+  //  }
+  //}
   .pkDetailWrap{
     width: 100%;
     .pkUserName{
