--- a/src/pages/Sport/mySport/index.less
+++ b/src/pages/Sport/mySport/index.less
@@ -27,9 +27,10 @@
   flex-wrap: wrap;
   align-items: center;
   img{
-    width: 45%;
     height: 200px;
-    margin: 10px;
+    object-fit: cover;
+    width: 30%;
+    margin:10px;
   }
 }
 .loadFooter{
