--- a/src/pages/Sport/adjustment/index.less
+++ b/src/pages/Sport/adjustment/index.less
@@ -117,12 +117,14 @@
     border-top: 1px solid #dddddd;
     p {
       float: left;
-      margin: 10px 15px;
-      padding-left: 15px;
-      width: 180px;
+      margin: 10px 10px;
+      padding-left: 5px;
+      width: 29%;
       height: 50px;
       border: 1px solid #cccccc;
       line-height: 50px;
+      overflow: hidden;
+      white-space: nowrap;
     }
   }
   .imgViewList {
