--- a/src/pages/Sport/sportCheck/index.less
+++ b/src/pages/Sport/sportCheck/index.less
@@ -42,3 +42,15 @@
     }
   }
 }
+.my-list{
+  .noData{
+    font-size: 30px;
+    color: #999999;
+    line-height: 80px;
+  }
+  .am-list-body{
+    &:after{
+      height: 0!important;
+    }
+  }
+}
