--- a/src/pages/Sport/adjustment/index.less
+++ b/src/pages/Sport/adjustment/index.less
@@ -1,4 +1,14 @@
 // 额外调整列表
+.adjustment-list {
+  .list-view {
+    // background: #ddaaee;
+    .am-list {
+      .am-pull-to-refresh-content-wrapper {
+        overflow: visible;
+      }
+    }
+  }
+}
 .list-wrap {
   margin: 10px 0;
   .my-list {
