--- a/src/pages/Pk/index.less
+++ b/src/pages/Pk/index.less
@@ -1,5 +1,12 @@
 .listview-wrap{
   position: relative;
+  .list-view {
+    .am-list {
+      .am-pull-to-refresh-content-wrapper {
+        overflow: visible;
+      }
+    }
+  }
   .pkActiveBox{
     width: 60px;
     height: 60px;
