--- a/src/pages/Sport/mySport/index.less
+++ b/src/pages/Sport/mySport/index.less
@@ -81,12 +81,12 @@
     line-height: 46px;
   }
 }
-//.listview-wrap {
-//  .am-list-view-scrollview {
-//    .am-list-view-scrollview-content {
-//      .am-pull-to-refresh-content-wrapper{
-//        height:calc(100vh - 100px);
-//      }
-//    }
-//  }
-//}
+.listview-wrap {
+  .list-view {
+    .am-list {
+      .am-pull-to-refresh-content-wrapper {
+        overflow: visible;
+      }
+    }
+  }
+}
