新增我的荣誉

--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -50,6 +50,10 @@
                 font-size: 28px;
                 color: #666;
             }
+            img {
+                object-fit: cover;
+                width: 30%;
+              }
         }
         .rankTitle{
             font-size: 28px;
