pk修改以及新增排行榜

--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -37,19 +37,27 @@
                 margin: 10px 0;
             }
             .list-order {
-                margin: 0 10px;
-                width: 50px;
-                color: #666666;
+                overflow: hidden;
+                width: 60px;
+                color: #888888;
                 text-align: center;
-                line-height: 100px;
+                line-height: 76px;
+                font-weight: 600;
+                img {
+                    width: 60px;
+                    height: 60px;
+                    vertical-align: middle;
+                }
             }
             .list-photo {
                 width: 80px;
-                height: 80px;
                 overflow: hidden;
+                text-align: center;
+                line-height: 76px;
                 img {
-                    width: 100%;
-                    object-fit: cover;
+                    width: 80px;
+                    height: 80px;
+                    vertical-align: middle;
                 }
             }
             .list-info {
@@ -59,18 +67,19 @@
                     color: #333333;
                 }
                 .list-score {
-                    color: #666666;
+                    color: #888888;
                     font-size: 24px;
                 }
             }
             .list-honor {
                 float: right;
                 width: 80px;
-                height: 80px;
+                line-height: 76px;
                 overflow: hidden;
                 img {
-                    width: 100%;
-                    object-fit: cover;
+                    width: 80px;
+                    height: 80px;
+                    vertical-align: middle;
                 }
             }
         }
