--- a/src/pages/My/useInfo/index.less
+++ b/src/pages/My/useInfo/index.less
@@ -35,15 +35,12 @@
     .ownDesc{
         overflow: hidden;
         .honorImgBox {
-            overflow-x: auto;
-            padding: 10px;
-            line-height: 2rem;
             display: flex;
             align-items: center;
+            width: 13rem;
+            padding: 10px;
+            line-height: 2rem;
             img {
-                justify-content: space-between;
-                align-items: center;
-                width: 100%;
                 display: inline-block;
                 margin: 0 10px;
             }
