--- a/src/pages/Sport/sportCheck/index.less
+++ b/src/pages/Sport/sportCheck/index.less
@@ -5,9 +5,13 @@
       font-size: 28px;
       color: #666;
       margin-left: 130px;
+      margin-right: 90px;
     }
     .checkUser{
       font-size: 30px;
+    }
+    .sportStatus{
+      font-size: 28px;
     }
   }
   .checkInnerWrap{
