--- a/src/pages/Sport/sportCheck/index.less
+++ b/src/pages/Sport/sportCheck/index.less
@@ -63,3 +63,26 @@
     overflow: visible;
   }
 }
+.ckActiveBox{
+
+  width: 60px;
+  height: 60px;
+  position: fixed;
+  left: 600px;
+  top: 800px;
+  border-radius: 50%;
+  padding: 5px;
+  box-shadow:1px 0px 24px 1px rgba(0, 184, 255, 0.62);
+  background: rgb(0, 184, 255);
+  z-index: 999;
+  span{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    font-size: 35px;
+    color: #fff;
+    text-align: center;
+    line-height: 46px;
+  }
+
+}
