排行榜页面优化

--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -54,6 +54,7 @@
                 overflow: hidden;
                 text-align: center;
                 line-height: 76px;
+                border-radius: 8px;
                 img {
                     width: 80px;
                     height: 80px;
@@ -61,14 +62,16 @@
                 }
             }
             .list-info {
+                padding: 8px 0;
                 padding-left: 20px;
-                line-height: 40px;
                 .list-name {
                     color: #333333;
                 }
                 .list-score {
-                    color: #888888;
-                    font-size: 24px;
+                    display: inline-block;
+                    margin-top: 6px;
+                    color: #aaaaaa;
+                    font-size: 26px;
                 }
             }
             .list-honor {
