--- a/src/component/search/index.less
+++ b/src/component/search/index.less
@@ -1,6 +1,3 @@
-
-
-
 .alert-enter {
   opacity: 0;
   transform: scale(0.9);
@@ -34,10 +31,9 @@
     right: 0;
     left: 0;
     bottom: 0;
-    height: 700px;
+    height: 650px;
     background: #fff;
     z-index: 1001;
-    overflow: auto;
   }
   .selectInfoBox{
     .searchActiveBox{
@@ -49,7 +45,7 @@
     .searchItem{
       .searchLabel{
         font-size: 28px;
-        padding: 10px 0;
+        padding: 20px 30px;
         border-bottom: 1px solid #cccccc;
         font-weight: 600;
       }
@@ -58,7 +54,7 @@
         span{
           display: inline-block;
           padding:10px;
-          background: #999999;
+          background: #e8e5e5;
           width: 100px;
           margin: 15px;
           border-radius: 6px;
