--- a/src/pages/Sport/index.less
+++ b/src/pages/Sport/index.less
@@ -29,5 +29,9 @@
                 }
             }
         }
+        .personSportChartLabel{
+            text-align: center;
+            color: #666666;
+        }
     }
 }
