--- a/src/pages/Pk/index.less
+++ b/src/pages/Pk/index.less
@@ -106,7 +106,7 @@
 }
 
 .pkListInner{
-  background: #1131e6;
+  background: #2196F3;
   position: absolute;
   left: 0;
   top: 0;
@@ -122,7 +122,7 @@
       display: block;
       width: 0%;
       box-shadow: 0px 0px 10px 1px #00E5FF, 0 0 1px #00E5FF, 0 0 1px #00E5FF, 0 0 1px #00E5FF, 0 0 1px #00E5FF, 0 0 1px #00E5FF, 0 0 1px #00E5FF;
-      background: #ff2222;
+      background: #d64545;
     }
   }
 }
