--- a/src/pages/Pk/index.less
+++ b/src/pages/Pk/index.less
@@ -122,7 +122,7 @@
       display: block;
       width: 0%;
       box-shadow: 0px 0px 10px 1px #00E5FF, 0 0 1px #00E5FF, 0 0 1px #00E5FF, 0 0 1px #00E5FF, 0 0 1px #00E5FF, 0 0 1px #00E5FF, 0 0 1px #00E5FF;
-      background: #d64545;
+      background: #f7868b;
     }
   }
 }
